<resources>
    <string name="app_name">SmartTaxiApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--<string name="google_maps_api">AIzaSyAGR_Nr7oTcNN-4MYCfcic2jxvOhhX1nso</string>-->
    <string name="google_maps_api">AIzaSyAFTpZoPPk_mUg74fKzqTAN9qVlP15RDhw</string>

    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_label_pickup_address">Enter Pickup Address</string>
    <string name="password">Password</string>
    <string name="first_name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="btn_next">Next</string>
    <string name="label_address">Address</string>
    <string name="question">Are you student or working ?</string>
    <string name="label_student">Student</string>
    <string name="label_working">Working</string>
    <string name="label_insititute_area">Institution</string>
    <string name="label_work_place">Work Place</string>
    <string name="review1">Communication with Passenger</string>
    <string name="review2">Service as Described</string>
    <string name="review3">Recommend the Driver</string>
    <string name="btn_publish">Publish</string>
    <string name="label_complaint">Complaint</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_update">Update</string>
    <string name="notification_title">Notification Title</string>
    <string name="custom_notification_text">Notification Description</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Add Ride</item>
        <item>Ride History</item>
        <item>Update Profile</item>
        <item>Notifications</item>
        <item>Feedback</item>
        <item>Find User</item>
        <item>Current Ride</item>
    </string-array>
    <string-array name="user_types">
        <item>Driver</item>
        <item>Passenger</item>
    </string-array>
    <string-array name="institution_names">
        <item>SLIIT</item>
        <item>IIT</item>
    </string-array>
    <string-array name="workplace_names">
        <item>Wso2</item>
        <!--<item>TxLabz</item>-->
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tv_label_selection">Please Select</string>
    <string name="tv_label_user_numbers">Number of users</string>
    <string name="label_login">Login</string>
    <string name="minimum_password">Password must be greater than 6</string>
    <string name="auth_failed">Auth Failed</string>
    <string name="additional_details">Additional Details :</string>
    <string name="speech_prompt">Do you want to accept or reject ?</string>
    <string name="speech_not_supported">Speech Not Supported</string>

</resources>
