<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InitialActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_profile" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                android:layout_weight="1"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/ed_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColor="@color/black"
                    android:maxLength="100"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:singleLine="true"
                    android:inputType="textWebEmailAddress" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:maxLength="13"
                    android:textColorHint="@color/white"
                    android:inputType="number"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textWebPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                android:layout_weight="1"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_address"
                    android:textColor="@color/black"
                    android:maxLength="100"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_types"
                >

            </Spinner>
            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_corner"
                android:text="@string/btn_next"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>