<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="100dp">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_profile" />
            <ProgressBar
                android:id="@+id/pb_image"
                style="?android:attr/progress"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                android:layout_weight="1"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:paddingLeft="8dp"
                    android:id="@+id/ed_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColor="@color/black"
                    android:maxLength="100"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:paddingLeft="8dp"
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:singleLine="true"
                    android:inputType="textWebEmailAddress" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:paddingLeft="8dp"
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLength="13"
                    android:textColorHint="@color/black"
                    android:inputType="number"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="10dp">

                <EditText
                    android:paddingLeft="8dp"
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="textWebPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                android:layout_weight="1"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:paddingLeft="8dp"
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_address"
                    android:textColor="@color/black"
                    android:maxLength="100"
                    android:textColorHint="@color/black"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/sp_user_types"
                android:paddingLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_types"
                >
            </Spinner>
            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_corner"
                android:text="@string/btn_update"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>